TFP-5671: Ikke lagre særlige grunner om beløpet er under 4R og skal ikke tilbakekreves (#2744)
Ikke lagre særlige grunner om beløpet er under 4R og skal ikke tilbakekreves.