@@ -39,10 +39,10 @@ public class AutomatiskVurdertVilkårTjeneste {
     public void automatiskVurdertVilkår(Behandling behandling, String begrunnelse) {
         var kontekst = behandlingskontrollTjeneste.initBehandlingskontroll(behandling);
         long behandlingId = behandling.getId();
-        List<DetaljertFeilutbetalingPeriodeDto> feilutbetaltePerioder = vilkårsvurderingTjeneste.hentDetaljertFeilutbetalingPerioder(behandlingId);
-        List<VilkårsvurderingPerioderDto> vilkårsvurdertePerioder = feilutbetaltePerioder.stream().filter(periode -> !periode.isForeldet())
+        var feilutbetaltePerioder = vilkårsvurderingTjeneste.hentDetaljertFeilutbetalingPerioder(behandlingId);
+        var vilkårsvurdertePerioder = feilutbetaltePerioder.stream().filter(periode -> !periode.isForeldet())
                 .map(periode -> lagVilkårsvurderingPeriode(periode.tilPeriode(), begrunnelse))
-                .collect(Collectors.toList());
+                .toList();
         vilkårsvurderingTjeneste.lagreVilkårsvurdering(behandlingId, vilkårsvurdertePerioder);
         //Aksjonpunkt oppretter ikke automatisk for automatisk saksbehandling. Det opprettes manuelt for å vise vilkår data i frontend.
         lagUtførtAksjonspunkt(kontekst, behandling);
